tests/baselines/reference/chainedAssignmentChecking.errors.txt
==== tests/cases/compiler/chainedAssignmentChecking.ts (2 errors) ====
    class X {
      constructor(public z) { }
      a: number;
    }
    
    class Y {
      constructor(public z) { }
      a: number;
      b: string;
    }
    
    class Z {
      z: any;
      c: string;
    }
    
    var c1 = new X(3);
    var c2 = new Y(5);
    var c3 = new Z();
    
    c1 = c2 = c3; // Should be error
    ~~
!!! chainedAssignmentChecking.ts(21,1): error TS2012: Cannot convert 'Z' to 'X':
!!! 	Type 'Z' is missing property 'a' from type 'X'.
         ~~
!!! chainedAssignmentChecking.ts(21,6): error TS2012: Cannot convert 'Z' to 'Y':
!!! 	Type 'Z' is missing property 'a' from type 'Y'.
    